--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ backend/write-beyond/target/maven-archiver/pom.properties
 frontend/note.txt
 frontend/file.txt
 frontend/chat.txt
+frontend/chat.txt
