--- a/backend/write-beyond/pom.xml
+++ b/backend/write-beyond/pom.xml
@@ -60,7 +60,18 @@
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
 
+        <!-- Spring Data JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
+        <!-- PostgreSQL JDBC driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!--        &lt;!&ndash; JPA for PostgresSQL integration &ndash;&gt;-->
         <!--        <dependency>-->
