--- a/backend/write-beyond/src/main/resources/application.properties
+++ b/backend/write-beyond/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=write-beyond
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/write_beyond_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional: JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
