--- a/backend/write-beyond/Dockerfile
+++ b/backend/write-beyond/Dockerfile
@@ -1,9 +1,16 @@
-FROM eclipse-temurin:17-jdk
+# Stage 1: Build
+FROM maven:3.9.9-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
+# Stage 2: Runtime
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 
-COPY target/write-beyond-0.0.1-SNAPSHOT.jar app.jar
+# copy the jar built in stage 1
+COPY --from=builder /app/target/write-beyond-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-
 ENTRYPOINT ["java","-jar","app.jar"]
